dtx layout improvements

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -60,6 +60,13 @@
 %%   Grave accent  \`     Left brace    \{     Vertical bar  \|
 %%   Right brace   \}     Tilde         \~}
 %
+% \makeatletter
+% \renewcommand\paragraph{\@startsection{paragraph}{4}{\z@}{%
+%     -3.25ex\@plus -1ex \@minus -.2ex}{%
+%     1.5ex \@plus .2ex}{%
+%     \normalfont\normalsize\bfseries}}
+% \makeatother
+% \newcommand\komascript{\textsc{Koma}-Script}
 % \newcommand\subsubsubsection[1]{\paragraph{#1:}}
 % \newcommand\version{4.0}
 % \newcommand\releasedate{2009/08/18}
@@ -248,7 +255,7 @@
 % extension is \texttt{lox}. The \cs{listoffixmes} macro generates the list of
 % all \fixme{} notes in a manner similar to that of the ``list of figures''
 % for instance. A standard layout is automatically used for the `article',
-% `report', `book' classes and their koma-script replacements. If another
+% `report', `book' classes and their \komascript{} replacements. If another
 % class is used, the `article' layout is selected. Also, note that if no
 % \fixme{} note remain in the document, this macro doesn't generate an empty
 % list, but rather stays silent. It also stays silent in \texttt{final} mode,
@@ -384,14 +391,14 @@
 %   Heavy internals refactoring.
 % \item[v3.4] \cs{fixme}, \cs{fxerror}, \cs{fxwarning} and \cs{fxnote} are now
 %   robust, thanks to Will Robertson.\\
-%   Fix incompatibility with KOMA-Script classes version of \cs{@starttoc} when
-%   the lox file is inexistent, reported by Philipp Stephani.
+%   Fix incompatibility with \komascript{} classes version of \cs{@starttoc}
+%   when the lox file is inexistent, reported by Philipp Stephani.
 % \item[v3.3] Document incompatibility between marginal layout and the ACM
 %   SIG classes, reported by Jochen Wuttke.\\
 %   Honor \texttt{twoside} option in marginal layout, suggested by Jens
 %   Remus.\\
-%   Support for KOMA-Script classes version 2006/07/30 v2.95b,
-%   suggested by Jens Remus.\\
+%   Support for \komascript{} classes version 2006/07/30 v2.95b, suggested by
+%   Jens Remus.\\
 %   Documentation improvements suggested by Brian van den Broek.\\
 %   Fix incompatibility with \texttt{amsart} reported by Lars Madsen:
 %   \cs{@starttoc} takes two arguments.\\
@@ -422,7 +429,7 @@
 %   Suggestions from Kasper B. Graversen |<kbg@dkik.dk>|.\\
 %   Support for Spanish thanks to Agust\'in Mart\'in |<agusmba@terra.es>|
 % \item[v1.5] New appearance option: \texttt{inline}.
-% \item[v1.4] Support for the koma-script classes.\\
+% \item[v1.4] Support for the \komascript{} classes.\\
 %   Fix bug reported by Ulf Jaenicke-Roessler: the \cs{listoffixmes} command
 %   didn't work when called before the first \fixme{} note.
 % \item[v1.3] Support for Italian thanks to Riccardo Murri
@@ -439,14 +446,16 @@
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{fixme}[2009/08/18 v4.0
-			Insert fixme notes in your documents]
+                        Insert fixme notes in your documents]
 
 %    \end{macrocode}
-% \DescribeMacro{\fixmelogo} The \fixme{} logo:
+% \begin{macro}{\fixmelogo}
+%   The \fixme{} logo:
 %    \begin{macrocode}
 \newcommand*\fixmelogo{\textsf{FiXme}}
 
 %    \end{macrocode}
+% \end{macro}
 % Some required packages:
 %    \begin{macrocode}
 \RequirePackage{ifthen}
@@ -466,15 +475,14 @@
 % \end{macro}
 % \begin{macro}{\@fxpkgwarning}
 %   \marg{msg}\\
-%   Issue a \fixme{} warning:
+%   Issue a \fixme{} package warning:
 %    \begin{macrocode}
 \newcommand\@fxpkgwarning[1]{\PackageWarning{FiXme}{#1}}
-
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxpkgerror}
 %   \marg{shortmsg}\marg{longmsg}\\
-%   Issue a \fixme{} error:
+%   Issue a \fixme{} package error:
 %    \begin{macrocode}
 \newcommand\@fxpkgerror[2]{\PackageError{FiXme}{#1}{#2}}
 
@@ -493,9 +501,9 @@
 % \end{macro}
 % \begin{macro}{\@fxdeclarelegacybooloption}
 %   \marg{name}\\
-%   A ``legacy boolean option'' is a legacy |opt| option and its |noopt|
-%   counterpart. Note that we don't really ensure the boolean status of these
-%   options anymore.
+%   A ``legacy boolean option'' is a legacy option \texttt{opt} and its
+%   \texttt{noopt} counterpart. Note that we don't really (need to) ensure the
+%   boolean status of these options anymore.
 %    \begin{macrocode}
 \newcommand\@fxdeclarelegacybooloption[1]{%
   \@fxdeclarelegacyoption{#1}
@@ -512,25 +520,25 @@
     You have given the key '#1' the argument '#2' but it takes
     none.\MessageBreak
     Type X to quit, fix that key and re-run LaTeX.\MessageBreak}}
-
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxdefinevoidkey}
 %   \marg{family}\marg{name}\marg{func}\\
-%   A \fixme{} ``void key'' is an \texttt{xkeyval} key that doesn't expect
-%   any argument.
+%   A \fixme{} ``void key'' is an \texttt{xkeyval} key that doesn't expect any
+%   argument.
 %    \begin{macrocode}
 \newcommand\@fxdefinevoidkey[3]{%
   \define@key[fx]{#1}{#2}[]{%
-    \ifthenelse{\equal{##1}{}}{#3}{\@fxvoidkeyerror{#2}{##1}}}}
+    \ifthenelse{\equal{##1}{}}{%
+      #3}{%
+      \@fxvoidkeyerror{#2}{##1}}}}
 
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxdefineboolkey}
 %   \marg{family}\marg{name}\\
 %   A \fixme{} ``boolkey'' is like an \texttt{xkeyval} one, with the addition
-%   that for every such \texttt{key}, there is a |nokey| void key
-%   counterpart.
+%   that for every such \texttt{key}, there is a |nokey| void key counterpart.
 %    \begin{macrocode}
 \newcommand\@fxdefineboolkey[2]{%
   \define@boolkey[fx]{#1}{#2}[true]{}
@@ -549,6 +557,7 @@
 % \end{macro}
 %
 % \subsubsection{Backward compatibility related}
+% \subsubsubsection{Legacy commands}
 % \begin{macro}{\@fxlegacycmdwarning}
 %   \marg{name}\\
 %   Issue a \fixme{} warning about a legacy command (see below):
@@ -556,7 +565,6 @@
 \newcommand\@fxlegacycmdwarning[1]{%
   \@fxpkgwarning{%
     \@fxcsstring{#1} is a legacy command that is not used anymore,}}
-
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxnewlegacycmd}
@@ -566,7 +574,6 @@
 %    \begin{macrocode}
 %% \newcommand\@fxnewlegacycmd[1]{%
 %%   \expandafter\newcommand\csname#1\endcsname[1]{\@fxlegacycmdwarning{#1}}
-%%
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxnewlegacyrenewable}
@@ -590,6 +597,8 @@
 
 %    \end{macrocode}
 % \end{macro}
+%
+% \subsubsubsection{Deprecated commands}
 % \begin{macro}{\@fxdeprecatedcmdwarning}
 %   \marg{old}\marg{new}\\
 %   Issue a \fixme{} warning about a deprecated command (see below):
@@ -597,7 +606,6 @@
 \newcommand\@fxdeprecatedcmdwarning[2]{%
   \@fxpkgwarning{%
     \@fxcsstring{#1} is deprecated; please use \@fxcsstring{#2} instead,}}
-
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxnewdeprecatedcmd}
@@ -611,7 +619,6 @@
   \@namedef{#1}{%
     \@fxdeprecatedcmdwarning{#1}{#2}%
     \@nameuse{#2}}}
-
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxprefixdeprecatecmd}
@@ -620,18 +627,18 @@
 %   \texttt{fx} prefix changes, we have a special macro to do this for
 %   deprecated commands:
 %    \begin{macrocode}
-\newcommand\@fxprefixdeprecatecmd[2][]{\@fxnewdeprecatedcmd{#1fixme#2}{#1fx#2}}
+\newcommand\@fxprefixdeprecatecmd[2][]{%
+  \@fxnewdeprecatedcmd{#1fixme#2}{#1fx#2}}
 
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxdeprecatedenvwarning}
-%   \marg{old}\marg{new}
+%   \marg{old}\marg{new}\\
 %   Issue a \fixme{} warning about a deprecated environment (see below):
 %    \begin{macrocode}
 \newcommand\@fxdeprecatedenvwarning[2]{%
   \@fxpkgwarning{%
     The '#1' environment is deprecated; please use '#2' instead,}}
-
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxnewdeprecatedenv}
@@ -673,7 +680,6 @@
       \@fxdeprecatedcmdwarning{#1}{#2}%
       \@namedef{#2}{\@nameuse{#1}}
     \fi}}
-
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxprefixdeprecaterenewable}
@@ -688,21 +694,21 @@
 %    \end{macrocode}
 % \end{macro}
 % \subsection{List macros}
-% \DescribeMacro{\l@fixme}
-% \DescribeMacro{\listoffixmes}
-% \DescribeMacro{\listoffixmes@final}
-% \DescribeMacro{\listoffixmes@draft}
-% Lists are output in a document class dependant fashion. Classes currently
-% recognized are |article|, |report|, |book| and their koma-script
-% replacements.\par
-% In order to prevent the List of Fixme's heading from being generated when
-% there are no \fixme{} notes, a test on the existence of the \texttt{lox}
-% file is performed. There's a slight bug left however: after removing the
-% last fixme{} note, one ends up with an empty \texttt{lox} file, so the
-% heading still appears. Previously, this was done by checking if some
-% \fixme{} notes were given, but that was buggy: the List of Fixme's could not
-% appear before the first fixme note\ldots I should try to detect whether the
-% file is empty.
+% \begin{macro}{\l@fixme}
+%   \begin{macro}{\listoffixmes}
+%     \begin{macro}{\listoffixmes@final}
+%       \begin{macro}{\listoffixmes@draft}
+%         Lists are output in a document class dependant fashion. Classes
+%         currently recognized are |article|, |report|, |book| and their
+%         \komascript{} replacements.\par
+%         In order to prevent the List of Fixme's heading from being generated
+%         when there are no \fixme{} notes, a test on the existence of the
+%         \texttt{lox} file is performed. There's a slight bug left however:
+%         after removing the last fixme{} note, one ends up with an empty
+%         \texttt{lox} file, so the heading still appears. Previously, this
+%         was done by checking if some \fixme{} notes were given, but that was
+%         buggy: the List of Fixme's could not appear before the first fixme
+%         note\ldots I should try to detect whether the file is empty.
 %    \begin{macrocode}
 \let\l@fixme\l@figure
 \newcommand\listoffixmes{}
@@ -713,30 +719,36 @@
     \@starttoc{lox}%
     \@listoffixmes@posttoc}{%
     \@starttoc{lox}}}
-
 %    \end{macrocode}
-% \DescribeMacro{\listoffixmes@draft@ams}
-% The \texttt{amsbook} and \texttt{amsart} classes have the very ugly idea of
-% redefining the \cs{@starttoc} command to take two arguments. Therefore, I
-% need to provide a specific version of the \cs{listoffixmes} macro:
+%       \end{macro}
+%     \end{macro}
+%   \end{macro}
+% \end{macro}
+% \begin{macro}{\listoffixmes@draft@ams}
+%   The \texttt{amsbook} and \texttt{amsart} classes have the very ugly idea
+%   of redefining the \cs{@starttoc} command to take two arguments. Therefore,
+%   I need to provide a specific version of the \cs{listoffixmes} macro:
 %    \begin{macrocode}
 \def\listoffixmes@draft@ams{\@starttoc{lox}\listfixmename}
 
 %    \end{macrocode}
-% \DescribeMacro{\listfixmename}
-% In order to redefine the list title, users have to call \cs{renewcommand}.
-% I don't like this much: it would be cleaner to provide a real command
-% that redefines the title internally. However, I'll stick with the
-% current scheme because it is consistent with the rest of \LaTeXe's lists.
+% \end{macro}
+% \begin{macro}{\listfixmename}
+%   In order to redefine the list title, users have to call \cs{renewcommand}.
+%   I don't like this much: it would be cleaner to provide a real command
+%   that redefines the title internally. However, I'll stick with the
+%   current scheme because it is consistent with the rest of \LaTeXe's lists.
 %    \begin{macrocode}
 \newcommand*\listfixmename{}
 
 %    \end{macrocode}
+% \end{macro}
 %
 % \subsubsection{Standard classes}
-% \DescribeMacro{\listoffixmes@pretoc@article}
-% \DescribeMacro{\listoffixmes@posttoc@article}
-% \textbf{|article| version:}
+% \subsubsubsection{\texttt{article} version}
+% \begin{macro}{\listoffixmes@pretoc@article}
+%   \begin{macro}{\listoffixmes@posttoc@article}
+%     \mbox{}
 %    \begin{macrocode}
 \def\@listoffixmes@pretoc@article{%
   \section*{\listfixmename%
@@ -744,9 +756,12 @@
 \def\@listoffixmes@posttoc@article{}
 
 %    \end{macrocode}
-% \DescribeMacro{\listoffixmes@pretoc@report}
-% \DescribeMacro{\listoffixmes@posttoc@report}
-% \textbf{|report| version:}
+%  \end{macro}
+% \end{macro}
+% \subsubsubsection{\texttt{report} version}
+% \begin{macro}{\listoffixmes@pretoc@report}
+%   \begin{macro}{\listoffixmes@posttoc@report}
+%     \mbox{}
 %    \begin{macrocode}
 \def\@listoffixmes@pretoc@report{%
   \if@twocolumn
@@ -760,9 +775,12 @@
 \def\@listoffixmes@posttoc@report{\if@restonecol\twocolumn\fi}
 
 %    \end{macrocode}
-% \DescribeMacro{\listoffixmes@pretoc@book}
-% \DescribeMacro{\listoffixmes@posttoc@book}
-% \textbf{|book| version:}
+%  \end{macro}
+% \end{macro}
+% \subsubsubsection{\texttt{book} version}
+% \begin{macro}{\listoffixmes@pretoc@book}
+%   \begin{macro}{\listoffixmes@posttoc@book}
+%     \mbox{}
 %    \begin{macrocode}
 \def\@listoffixmes@pretoc@book{%
   \if@twocolumn
@@ -776,20 +794,25 @@
 \def\@listoffixmes@posttoc@book{\if@restonecol\twocolumn\fi}
 
 %    \end{macrocode}
+%  \end{macro}
+% \end{macro}
 %
-% \subsubsection{koma-script classes}
-% \DescribeMacro{\lox@heading}
-% The code below (version 3.3) mimics KOMA-Script version 2006/07/30 v2.95b.
+% \subsubsection{\komascript{} classes}
+% The code below (version 3.3) mimics \komascript{} version 2006/07/30 v2.95b.
 % Older versions (using chapter*) are no longer supported because it is
 % simpler that way, but if some people complain, I'll  have to conditionalize
-% on the KOMA-Script version, which would be a PITA.
+% on the \komascript{} version, which would be a \textsc{pita}.
+% \begin{macro}{\lox@heading}
+%   \mbox{}
 %    \begin{macrocode}
 \newcommand*\lox@heading{\float@listhead{\listfixmename}}
 
 %    \end{macrocode}
-% \DescribeMacro{\listoffixmes@pretoc@scrartcl}
-% \DescribeMacro{\listoffixmes@posttoc@scrartcl}
-% \textbf{|scrartcl| version:}
+%  \end{macro}
+%  \subsubsubsection{\texttt{scrartcl} version}
+%  \begin{macro}{\listoffixmes@pretoc@scrartcl}
+%    \begin{macro}{\listoffixmes@posttoc@scrartcl}
+%      \mbox{}
 %    \begin{macrocode}
 \def\@listoffixmes@pretoc@scrartcl{%
   \begingroup%
@@ -801,9 +824,11 @@
   }
 
 %    \end{macrocode}
-% \DescribeMacro{\listoffixmes@pretoc@scrreprt}
-% \DescribeMacro{\listoffixmes@posttoc@scrreprt}
-% \textbf{|scrreprt| version:}
+%  \end{macro}
+% \end{macro}
+% \subsubsubsection{\texttt{scrreprt} version}
+% \begin{macro}{\listoffixmes@pretoc@scrreprt}
+%   \begin{macro}{\listoffixmes@posttoc@scrreprt}
 %    \begin{macrocode}
 \def\@listoffixmes@pretoc@scrreprt{%
   \begingroup%
@@ -821,9 +846,11 @@
   }
 
 %    \end{macrocode}
-% \DescribeMacro{\listoffixmes@pretoc@scrbook}
-% \DescribeMacro{\listoffixmes@posttoc@scrbook}
-% \textbf{|scrbook| version:}
+%  \end{macro}
+% \end{macro}
+% \subsubsubsection{\texttt{scrbook} version}
+% \begin{macro}{\listoffixmes@pretoc@scrbook}
+%   \begin{macro}{\listoffixmes@posttoc@scrbook}
 %    \begin{macrocode}
 \def\@listoffixmes@pretoc@scrbook{%
   \begingroup%
@@ -841,6 +868,8 @@
 }
 
 %    \end{macrocode}
+%  \end{macro}
+% \end{macro}
 %
 % \subsection{Layout}
 % \subsubsection{Layout macros}
@@ -856,13 +885,21 @@
 % \end{macro}
 %
 % \subsubsubsection{Textual output}
-% \begin{macro}{\FXLayoutMargin}
-%   \marg{prefix}\marg{note}
+% \begin{macro}{\FXLayoutInline}
+%   \begin{macro}{\FXLayoutMargin}
+%     \begin{macro}{\FXLayoutFootnote}
+%       \marg{prefix}\marg{note}
 %    \begin{macrocode}
+\newcommand\FXLayoutInline[2]{%
+  \textbf{#1}: \emph{#2}}
 \newcommand\FXLayoutMargin[2]{%
   \marginpar[\footnotesize\raggedleft\textbf{#1}: \emph{#2}]{%
     \footnotesize\raggedright\textbf{#1}: \emph{#2}}}
+\newcommand\FXLayoutFootnote[2]{%
+  \footnote{\textbf{#1}: \emph{#2}}}
 %    \end{macrocode}
+%     \end{macro}
+%   \end{macro}
 % \end{macro}
 % \begin{macro}{\FXLayoutMarginCLue}
 %   \marg{prefix}
@@ -870,31 +907,17 @@
 \newcommand\FXLayoutMarginClue[1]{%
   \marginpar[\footnotesize\raggedleft\textbf{#1}!]{%
     \footnotesize\raggedright\textbf{#1}!}}
-%    \end{macrocode}
-% \end{macro}
-% \begin{macro}{\FXLayoutInline}
-%   \marg{prefix}\marg{note}
-%    \begin{macrocode}
-\newcommand\FXLayoutInline[2]{%
-  \textbf{#1}: \emph{#2}}
-%    \end{macrocode}
-% \end{macro}
-% \begin{macro}{\FXLayoutFootnote}
-%   \marg{prefix}\marg{note}
-%    \begin{macrocode}
-\newcommand\FXLayoutFootnote[2]{%
-  \footnote{\textbf{#1}: \emph{#2}}}
 
 %    \end{macrocode}
-%   \end{macro}
+% \end{macro}
 % Note that neither \cs{FXLayoutUser} nor the deprecated version \cs{FXUser}
 % are defined here. Requesting the |user| layout without defining one or the
 % other would produce an error, which is the expected behavior.
 %    \begin{macrocode}
-\@fxlayoutrename{Margin}
-\@fxlayoutrename{MarginClue}
 \@fxlayoutrename{Inline}
+\@fxlayoutrename{Margin}
 \@fxlayoutrename{Footnote}
+\@fxlayoutrename{MarginClue}
 
 %    \end{macrocode}
 %
@@ -910,7 +933,6 @@
 %   \marg{note}
 %    \begin{macrocode}
 \newcommand\FXLayoutIndex[1]{\index{***@\fixmeindexname:!#1}}
-
 \@fxlayoutrename{Index}
 
 %    \end{macrocode}
@@ -930,11 +952,16 @@
 % |marginclue| layouts are mutually exclusive, so we have to redefine the
 % |xkeyval| key macro to handle this.
 %    \begin{macrocode}
+\@fxdefineboolkey{layout}{inline}
+
 \define@boolkey[fx]{layout}{margin}[true]{%
   \ifthenelse{\boolean{fx@layout@margin}\and\boolean{fx@layout@marginclue}}{%
     \@fxpkgwarning{Marginal notes requested; turning marginal clues off,}%
     \fx@layout@marginclue{false}}}
 \@fxdefinevoidkey{layout}{nomargin}{\fx@layout@margin{false}}
+
+\@fxdefineboolkey{layout}{footnote}
+\@fxdefineboolkey{layout}{user}
 
 \define@boolkey[fx]{layout}{marginclue}[true]{%
   \ifthenelse{\boolean{fx@layout@marginclue}\and\boolean{fx@layout@margin}}{%
@@ -942,9 +969,6 @@
     \fx@layout@margin{false}}}
 \@fxdefinevoidkey{layout}{nomarginclue}{\fx@layout@marginclue{false}}
 
-\@fxdefineboolkey{layout}{inline}
-\@fxdefineboolkey{layout}{footnote}
-\@fxdefineboolkey{layout}{user}
 \@fxdefineboolkey{layout}{index}
 
 \@fxdefinecmdkey[inline]{layout}{innerfallback}
@@ -1007,18 +1031,21 @@
 \@fxlogrename{Fatal}
 
 %    \end{macrocode}
-% \DescribeMacro{\@fxlogcs@note}
-% \DescribeMacro{\@fxlogcs@warning}
-% \DescribeMacro{\@fxlogcs@fatal}
-% In order for the generic dispatch to be able to call the logging
-% macros, we need an easier translation mechanism from the note type to the
-% actual command name:
+% \begin{macro}{\@fxlogcs@note}
+%   \begin{macro}{\@fxlogcs@warning}
+%     \begin{macro}{\@fxlogcs@fatal}
+%       In order for the generic dispatch to be able to call the logging
+%       macros, we need an easier translation mechanism from the note type to
+%       the actual command name:
 %    \begin{macrocode}
 \let\@fxlogcs@note\FXLogNote
 \let\@fxlogcs@warning\FXLogWarning
 \let\@fxlogcs@error\FXLogError
 
 %    \end{macrocode}
+%    \end{macro}
+%  \end{macro}
+% \end{macro}
 %
 % \subsubsection{Logging options}
 %    \begin{macrocode}
@@ -1041,12 +1068,13 @@
 
 %    \end{macrocode}
 % \end{macro}
-% \DescribeMacro{\thefixmecount}
-% |fixmecount| maintains the total of all notes, regardless of their level.
+% \begin{macro}{\thefixmecount}
+%   |fixmecount| maintains the total of all notes, regardless of their level.
 %    \begin{macrocode}
 \newcounter{fixmecount}
 
 %    \end{macrocode}
+% \end{macro}
 % \begin{macro}{\@fxnoteparameters}
 %   \marg{type}\\
 %   The following macro creates all required note parameters:
@@ -1062,10 +1090,10 @@
 
 %    \end{macrocode}
 % \end{macro}
-% \DescribeMacro{\thefx*count}
-% \DescribeMacro{\fx*prefix}
-% \DescribeMacro{\fx*indexname}
-% And we use it for all note types:
+% \begin{macro}{\thefx*count}
+%   \begin{macro}{\fx*prefix}
+%     \begin{macro}{\fx*indexname}
+%       And we use it for all note types:
 %    \begin{macrocode}
 \@fxnoteparameters{note}
 \@fxnoteparameters{warning}
@@ -1073,16 +1101,22 @@
 \@fxnoteparameters{fatal}
 
 %    \end{macrocode}
+%     \end{macro}
+%   \end{macro}
+% \end{macro}
 %
 % \subsubsection{Layout dispatch}
 % \begin{macro}{\@fxinnerfallbackcmd}
 %   \marg{name}\\
-%   \DescribeMacro{\@fxhandleinnerfallback}
-%   Automatic disabling of the \texttt{margin} and \texttt{marginclue}
-%   layouts when \TeX{} is in \texttt{inner} mode:
 %    \begin{macrocode}
 \def\@fxinnerfallbackcmd#1{%
   \@nameuse{fx@layout@#1}}
+%    \end{macrocode}
+% \end{macro}
+% \begin{macro}{\@fxhandleinnerfallback}
+%   Automatic disabling of the \texttt{margin} and \texttt{marginclue}
+%   layouts when \TeX{} is in \texttt{inner} mode:
+%    \begin{macrocode}
 \def\@fxhandleinnerfallback{%
   \ifinner%
     \fx@layout@marginclue{false}%
@@ -1113,12 +1147,13 @@
 
 %    \end{macrocode}
 % \end{macro}
+%
 % \subsubsection{Non fatal notes}
 % The generic mechanism below applies only to \fixme{} notes, warnings and
-% errors. Fatal notes are handled in the next section.\\
-% \DescribeMacro{\@@fx@final}
-% \DescribeMacro{\@@fx@draft}
-% \marg{type}\marg{note}
+% errors. Fatal notes are handled in the next section.
+% \begin{macro}{\@@fx@final}
+%   \begin{macro}{\@@fx@draft}
+%     \marg{type}\marg{note}
 %    \begin{macrocode}
 \def\@@fx@final#1#2{%
   \iffx@log@silent\else\@nameuse{@fxlogcs@#1}{#2}\fi%
@@ -1127,7 +1162,10 @@
 \def\@@fx@draft#1#2{%
   \@fxlayout{#1}{#2}%
   \@@fx@final{#1}{#2}}
+
 %    \end{macrocode}
+%  \end{macro}
+% \end{macro}
 % \begin{macro}{\@@fx}
 %   \marg{type}\marg{note}
 %    \begin{macrocode}
@@ -1148,10 +1186,10 @@
 
 %    \end{macrocode}
 % \end{macro}
-% \DescribeMacro{\fxnote}
-% \DescribeMacro{\fxwarning}
-% \DescribeMacro{\fxerror}
-% \oarg{options}\marg{note}
+% \begin{macro}{\fxnote}
+%   \begin{macro}{\fxwarning}
+%     \begin{macro}{\fxerror}
+%       \oarg{options}\marg{note}
 %    \begin{macrocode}
 \DeclareRobustCommand\fxnote{\@ifnextchar[%]
   {\@fx{note}}{\@@fx{note}}}
@@ -1161,6 +1199,9 @@
   {\@fx{error}}{\@@fx{error}}}
 
 %    \end{macrocode}
+%     \end{macro}
+%   \end{macro}
+% \end{macro}
 %
 % \subsubsection{Fatal notes}
 % Fatal notes can't be handled in the same generic way as the others for two
@@ -1171,8 +1212,8 @@
 % new versions by default. \cs{FiXmeUser} is treated a bit differently though;
 % see comment in the Finale's ``Backward Compatibility'' section.
 %    \begin{macrocode}
-\newcommand\FiXmeMargin[1]{\FXLayoutMargin{\fxfatalprefix}{#1}}
 \newcommand\FiXmeInline[1]{\FXLayoutInline{\fxfatalprefix}{#1}}
+\newcommand\FiXmeMargin[1]{\FXLayoutMargin{\fxfatalprefix}{#1}}
 \newcommand\FiXmeFootnote[1]{\FXLayoutFootnote{\fxfatalprefix}{#1}}
 
 \newcommand\FiXmeUser[1]{}
@@ -1181,11 +1222,11 @@
 \newcommand\FiXmeIndex[1]{\FXLayoutIndex{#1}}
 
 %    \end{macrocode}
-% \DescribeMacro{\@@@fxfatal@final}
-% \DescribeMacro{\@@@fxfatal@draft}
-% \marg{note}\\
-% Note that we start with the footnote layout, so that it is sticked
-% properly to the preceding text if active.
+% \begin{macro}{\@@@fxfatal@final}
+%   \begin{macro}{\@@@fxfatal@draft}
+%     \marg{note}\\
+%     Note that we start with the footnote layout, so that it is sticked
+%     properly to the preceding text if active.
 %    \begin{macrocode}
 \def\@@@fxfatal@final#1{%
   \@fxpkgerror{'#1' fatal error left in final version}{%
@@ -1208,6 +1249,8 @@
   \addcontentsline{lox}{fixme}{\protect\fxfatalprefix: #1}}
 
 %    \end{macrocode}
+%   \end{macro}
+% \end{macro}
 % \begin{macro}{\@@fxfatal}
 %   \marg{note}
 %    \begin{macrocode}
@@ -1225,10 +1268,11 @@
   \setkeys[fx]{layout,log,lang,ltx}{#1}%
   \@@fxfatal{#2}%
   \endgroup}
+
 %    \end{macrocode}
 % \end{macro}
-%     \begin{macro}{\fxfatal}
-%       \oarg{options}\marg{note}
+% \begin{macro}{\fxfatal}
+%   \oarg{options}\marg{note}
 %    \begin{macrocode}
 \DeclareRobustCommand\fxfatal{\@ifnextchar[%]
   {\@fxfatal}{\@@fxfatal}}
@@ -1237,6 +1281,7 @@
 
 %    \end{macrocode}
 % \end{macro}
+%
 % \subsection{\fixme{} environments}
 % \subsubsection{Layout macros}
 % \begin{macro}{\FXEnvBegin}
@@ -1246,21 +1291,24 @@
     \textbf{#1:}}
 %    \end{macrocode}
 % \end{macro}
-% \DescribeMacro{\FXEnvEnd}
+% \begin{macro}{\FXEnvEnd}
 %    \begin{macrocode}
 \newcommand\FXEnvEnd{\end{quotation}}
 
 %    \end{macrocode}
+% \end{macro}
+%
 % \subsubsection{\texttt{final} and \texttt{draft} versions}
 % \fixme{} environments are always laid out inline. The environment's summary
-% is laid out by the corresponding macro, but the |inline| layout is disabled.
-% In |final| mode, |verbatim|'s \texttt{comment} environment is used to
+% is laid out by the corresponding macro, but the |inline| layout is disabled
+% (this is as easy as appending \texttt{noinline} at the end of the options
+% list). In |final| mode, |verbatim|'s \texttt{comment} environment is used to
 % suppress output. Note that contrary to the macro version, we don't need to
 % define the \texttt{fxfatal} environment in a specialized way because the
 % fatal error will be triggered by the call to \cs{fxfatal} anyway.\\
-% \DescribeMacro{\@fxenvbegin@final}
-% \DescribeMacro{\@fxenvbegin@draft}
-% \marg{type}\marg{summary}
+% \begin{macro}{\@fxenvbegin@final}
+%   \begin{macro}{\@fxenvbegin@draft}
+%     \marg{type}\marg{summary}
 %    \begin{macrocode}
 \def\@fxenvbegin@final#1#2{%
   \@nameuse{#1}{#2}%
@@ -1270,13 +1318,17 @@
   \FXEnvBegin{\@nameuse{#1prefix}}}
 
 %    \end{macrocode}
-% \DescribeMacro{\@fxenvend@final}
-% \DescribeMacro{\@fxenvend@draft}
+%   \end{macro}
+% \end{macro}
+% \begin{macro}{\@fxenvend@final}
+%   \begin{macro}{\@fxenvend@draft}
 %    \begin{macrocode}
 \def\@fxenvend@final{\endcomment}
 \def\@fxenvend@draft{\FXEnvEnd}
 
 %    \end{macrocode}
+%   \end{macro}
+% \end{macro}
 %
 % \subsubsection{User-level environments}
 % \begin{macro}{\@fxdefineenvironment}
@@ -1389,15 +1441,15 @@
 %    \end{macrocode}
 %
 % \subsection{Document status processing}
-% \DescribeMacro{\@@fx@}
-% \DescribeMacro{\@@@fxfatal}
-% \DescribeMacro{\@fxenvbegin}
-% \DescribeMacro{\@fxenvend}
-% \DescribeMacro{\listoffixmes}
-% \DescribeMacro{\@listoffixmes@pretoc}
-% \DescribeMacro{\@listoffixmes@posttoc}
-% Select draft or final versions of internal macros, some of them also
-% depending on the document class:
+% \begin{macro}{\@@fx@}
+%   \begin{macro}{\@@@fxfatal}
+%     \begin{macro}{\@fxenvbegin}
+%       \begin{macro}{\@fxenvend}
+%         \begin{macro}{\listoffixmes}
+%           \begin{macro}{\@listoffixmes@pretoc}
+%             \begin{macro}{\@listoffixmes@posttoc}
+%               Select draft or final versions of internal macros, some of
+%               them also depending on the document class:
 %    \begin{macrocode}
 \@fxdefinevoidkey{ltx}{final}{%
   \let\@@fx@\@@fx@final%
@@ -1414,28 +1466,28 @@
       \let\@listoffixmes@pretoc\@listoffixmes@pretoc@report%
       \let\@listoffixmes@posttoc\@listoffixmes@posttoc@report}{%
       \@ifclassloaded{book}{%
-	\let\@listoffixmes@pretoc\@listoffixmes@pretoc@book%
-	\let\@listoffixmes@posttoc\@listoffixmes@posttoc@book}{%
-	\@ifclassloaded{scrartcl}{%
-	  \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrartcl%
-	  \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrartcl}{%
-	  \@ifclassloaded{scrreprt}{%
-	    \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrreprt%
-	    \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrreprt}{%
-	    \@ifclassloaded{scrbook}{%
-	      \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrbook%
-	      \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrbook}{%
-	      \@ifclassloaded{amsbook}{%
-		\let\listoffixmes@draft\listoffixmes@draft@ams}{%
-		\@ifclassloaded{amsart}{%
-		  \let\listoffixmes@draft\listoffixmes@draft@ams}{%
-		  %% Use the article layout by default.
-		  \let\@listoffixmes@pretoc\@listoffixmes@pretoc@article%
-		  \let\@listoffixmes@posttoc\@listoffixmes@posttoc@article}%
+        \let\@listoffixmes@pretoc\@listoffixmes@pretoc@book%
+        \let\@listoffixmes@posttoc\@listoffixmes@posttoc@book}{%
+        \@ifclassloaded{scrartcl}{%
+          \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrartcl%
+          \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrartcl}{%
+          \@ifclassloaded{scrreprt}{%
+            \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrreprt%
+            \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrreprt}{%
+            \@ifclassloaded{scrbook}{%
+              \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrbook%
+              \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrbook}{%
+              \@ifclassloaded{amsbook}{%
+                \let\listoffixmes@draft\listoffixmes@draft@ams}{%
+                \@ifclassloaded{amsart}{%
+                  \let\listoffixmes@draft\listoffixmes@draft@ams}{%
+                  %% Use the article layout by default.
+                  \let\@listoffixmes@pretoc\@listoffixmes@pretoc@article%
+                  \let\@listoffixmes@posttoc\@listoffixmes@posttoc@article}%
               }%
-	    }%
-	  }%
-	}%
+            }%
+          }%
+        }%
       }%
     }%
   }%
@@ -1446,6 +1498,13 @@
   \let\listoffixmes\listoffixmes@draft}
 
 %    \end{macrocode}
+%             \end{macro}
+%           \end{macro}
+%         \end{macro}
+%       \end{macro}
+%     \end{macro}
+%   \end{macro}
+%   \end{macro}
 %
 % \subsection{Finale}
 % \subsubsection{Options Processing}
