--- a/fixme.dtx
+++ b/fixme.dtx
@@ -70,8 +70,8 @@
 % \newcommand\subsubsubsection[1]{\paragraph{#1:}}
 % \newcommand\version{4.0}
 % \newcommand\releasedate{2009/08/18}
-% \newcommand\packagecopyright{Copyright \copyright{} 1998, 1999, 2000, 2001,
-%   2002, 2004, 2005, 2006, 2007, 2009 Didier Verna}
+% \newcommand\packagecopyright{%
+%   Copyright \copyright{} 1998--2002, 2004--2007, 2009 Didier Verna}
 % \newcommand\fixme{\textsf{FiXme}}
 % \newcommand\auctex{AUC-\TeX}
 % \MakeShortVerb{\|}
